Half Bug Squasher

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <nav>
             <ul>
-                <li><a href="https://teamblitzolaves.github.io/"><img src="Logo.png" style="height:2.5%;width:2.5%;"></a></li>
+                <li><a href="https://teamblitzolaves.github.io/" style="padding: 0; width:50px;"><img src="Logo.png" style="height:50px;width:50px;"></a></li>
                 <li><a href="#">Welcome!</a></li>
                 <li><a href="#our-team">Our Team</a></li>
                 <li><a href="#our-car-design">Our Car Design</a></li>
@@ -33,31 +33,31 @@
             <p>F1 in Schools is a STEM-based fun activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
             <a href="https://www.f1inschools.co.uk/about.html">Learn more..</a>
             <h1>The Team</h1>
-            <div class="small">
+            <div class="medium">
                 <h2>Yash Parekh</h2>
                 <p class="bold">Team Leader & Graphic Designer</p>
-                <img src="Yash.jpg">
+                <img src="Yash.jpg" style="float:left;">
                 <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
                 <blockquote style="background-color:grey;">"Quote"</blockquote>
             </div>
-            <div class="small">
+            <div class="medium">
                 <h2>Pranit Malhotra</h2>
                 <p class="bold">Design Engineer</p>
-                <img src="Pranit.jpg">
+                <img src="Pranit.jpg" style="float:left;">
                 <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
                 <blockquote style="background-color:grey;">"Quote"</blockquote>
             </div>
-            <div class="small">
+            <div class="medium">
                 <h2>Chen Hui Wang</h2>
                 <p class="bold">Testing & Social Media Manager</p>
-                <img src="Chen.jpg">
+                <img src="Chen.jpg" style="float:left;">
                 <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car step by step. In addition, he manages the social media and digital presence side of our brand, even creating this very website, and managing our Twitter account. He has also set up our email and Github account to use for team-related activities.</p>
                 <blockquote style="background-color:grey;">"f1 is very cool"</blockquote>
             </div>
-            <div class="small">
+            <div class="medium">
                 <h2>Rayhaan Smith</h2>
                 <p class="bold">Resource Manager</p>
-                <img src="Rayhaan.jpg">
+                <img src="Rayhaan.jpg" style="float:left;">
                 <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
                 <blockquote style="background-color:grey;">"Quote"</blockquote>
             </div>
@@ -78,8 +78,8 @@
             <p>Chen Hui Wang, Testing & Social Media Manager: chenhui.wang@saintolaves.net</p>
             <p>Rayhaan Smith, Resource Manager: rayhaan.smith@saintolaves.net</p>
         </section>
-        <footer style="margin:0">
-            <h3 style="padding: 20%;">© Chen Wang, 2022-2023. All rights reserved.</h3>
+        <footer style="margin:0; padding:1%">
+            <h3>© Chen Wang, 2022-2023. All rights reserved.</h3>
         </footer>
     </body>
 </html>
