visual improvements, car design published & footer updated

--- a/index.html
+++ b/index.html
@@ -13,73 +13,119 @@
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <li><a href="https://teamblitzolaves.github.io/" style="padding: 0; width:50px;"><img src="Logo.png" style="height:50px;width:50px;"></a></li>
-                <li><a href="#">Welcome!</a></li>
-                <li><a href="#our-team">Our Team</a></li>
-                <li><a href="#our-car-design">Our Car Design</a></li>
-                <li><a href="#the-portfolio">The Portfolio</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
-            </ul>
-        </nav>
-        <section style="width:100%;height:100%;">
-            <img src="Render.png" style="width:100%;height:100%;">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="https://teamblitzolaves.github.io/" class="image"><img src="Logo.png" class="logo"></a></li>
+                    <li><a href="#" class="active">Welcome!</a></li>
+                    <li><a href="#our-team">Our Team</a></li>
+                    <li><a href="#our-car-design">Our Car Design</a></li>
+                    <li><a href="#the-portfolio">The Portfolio</a></li>
+                    <li><a href="#contact-us">Contact Us</a></li>
+                </ul>
+            </nav>
+            <section>
+                <img src="Render.png" class="banner">
+            </section>
+        </header>
+
+        <section id="middle">
+            <section id="our-team">
+                <br>
+                <h1>Who are we?</h1>
+                <p class="para">We are Team Blitz of Saint Olave's Grammar School, a group of 4 dedicated team members with a burning passion of STEM and DT. We all came together over the months, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are with our car, portfolio and brand today!</p>
+                <br>
+                <h1>What is F1 in Schools?</h1>
+                <p class="para">F1 in Schools is a STEM-based fun activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
+                <a href="https://www.f1inschools.co.uk/about.html">Learn more..</a>
+                <br>
+                <br>
+                <h1>The Team</h1>
+                <br>
+                <div class="left">
+                    <div class="name">
+                        <h2>Yash Parekh</h2>
+                        <p>Team Leader & Graphic Designer</p>
+                    </div>
+                    <img src="Yash.jpg">
+                    <div class="info">
+                        <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                        <blockquote>"Quote"</blockquote>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="name">
+                        <h2>Pranit Malhotra</h2>
+                        <p>Design Engineer</p>
+                    </div>
+                    <img src="Pranit.jpg">
+                    <div class="info">
+                        <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                        <blockquote>"Quote"</blockquote>
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="name">
+                        <h2>Chen Hui Wang</h2>
+                        <p>Testing & Social Media Manager</p>
+                    </div>
+                    <img src="Chen.jpg">
+                    <div class="info">
+                        <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car step by step, and being able to produce drag and lift values for us to compare against and log in our portfolio. In addition, he manages the social media (our Twitter and email) and digital presence side of our brand, even creating this very website! He has also set up our email and Github account to use for team-related activities.</p>
+                        <blockquote>"f1 is very cool"</blockquote>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="name">
+                        <h2>Rayhaan Smith</h2>
+                        <p>Resource Manager</p>
+                    </div>
+                    <img src="Rayhaan.jpg">
+                    <div class="info">
+                        <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                        <blockquote>"Quote"</blockquote>
+                    </div>
+                </div>
+                <br>
+                <br>
+            </section>
+
+            <section id="our-car-design">
+                <h1>Our Car Design</h1>
+                <img src="car.png" id="car">
+                <div class="longright">
+                    <h2>Dash</h2>
+                    <h3>Drag - 0.24974529N</h3>
+                    <p>Dash is our first car we have created and competed with, going through many stages to reach where it has got to. It has performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit. Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                </div>
+            </section>
+
+            <br>
+            <br>
+            <section id="the-portfolio">
+                <h1>Our Portfolio</h1>
+                <p>To be published after Regionals</p>
+            </section>
+
+            <br>
+            <section id="contact-us">
+                <h1>Contact us</h1>
+                <p>Team Email: teamblitz.f1.olaves@gmail.com</p>
+                <p>Yash Parekh, Team Leader: yash.parekh@saintolaves.net</p>
+                <p>Pranit Malhotra, Design Engineer: pranit.malhotra@saintolaves.net</p>
+                <p>Chen Hui Wang, Testing & Social Media Manager: chenhui.wang@saintolaves.net</p>
+                <p>Rayhaan Smith, Resource Manager: rayhaan.smith@saintolaves.net</p>
+            </section>
         </section>
-        <section id="our-team">
-            <h1>Who are we?</h1>
-            <p>We are Team Blitz of Saint Olave's Grammar School, a group of 4 dedicated team members with a burning passion of STEM and DT. We all came together over the months, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are with our car, portfolio and brand today!</p>
-            <h1>What is F1 in Schools?</h1>
-            <p>F1 in Schools is a STEM-based fun activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
-            <a href="https://www.f1inschools.co.uk/about.html">Learn more..</a>
-            <h1>The Team</h1>
-            <div class="medium">
-                <h2>Yash Parekh</h2>
-                <p class="bold">Team Leader & Graphic Designer</p>
-                <img src="Yash.jpg" style="float:left;">
-                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
-                <blockquote style="background-color:grey;">"Quote"</blockquote>
-            </div>
-            <div class="medium">
-                <h2>Pranit Malhotra</h2>
-                <p class="bold">Design Engineer</p>
-                <img src="Pranit.jpg" style="float:left;">
-                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
-                <blockquote style="background-color:grey;">"Quote"</blockquote>
-            </div>
-            <div class="medium">
-                <h2>Chen Hui Wang</h2>
-                <p class="bold">Testing & Social Media Manager</p>
-                <img src="Chen.jpg" style="float:left;">
-                <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car step by step. In addition, he manages the social media and digital presence side of our brand, even creating this very website, and managing our Twitter account. He has also set up our email and Github account to use for team-related activities.</p>
-                <blockquote style="background-color:grey;">"f1 is very cool"</blockquote>
-            </div>
-            <div class="medium">
-                <h2>Rayhaan Smith</h2>
-                <p class="bold">Resource Manager</p>
-                <img src="Rayhaan.jpg" style="float:left;">
-                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
-                <blockquote style="background-color:grey;">"Quote"</blockquote>
-            </div>
-        </section>
-        <section id="our-car-design">
-            <h1>Our Car Design</h1>
-            <p>To be published after Regionals</p>
-        </section>
-        <section id="the-portfolio">
-            <h1>Our Portfolio</h1>
-            <p>To be published after Regionals</p>
-        </section>
-        <section id="contact-us">
-            <h1>Contact us</h1>
-            <p>Team Email: teamblitz.f1.olaves@gmail.com</p>
-            <p>Yash Parekh, Team Leader: yash.parekh@saintolaves.net</p>
-            <p>Pranit Malhotra, Design Engineer: pranit.malhotra@saintolaves.net</p>
-            <p>Chen Hui Wang, Testing & Social Media Manager: chenhui.wang@saintolaves.net</p>
-            <p>Rayhaan Smith, Resource Manager: rayhaan.smith@saintolaves.net</p>
-        </section>
-        <footer style="margin:0; padding:1%">
+
+        <br>
+        <footer>
             <h3>© Chen Wang, 2022-2023. All rights reserved.</h3>
+            <div>
+                <a href="mailto:teamblitz.f1.olaves@saintolaves.net" target="_blank"><img class="icon" src="mail.png"></a>
+                <a href="https://twitter.com/blitz_f1" target="_blank"><img class="icon" src="x.png"></a>
+                <a href="https://github.com/teamblitzolaves" target="_blank"><img class="icon" src="github.png"></a>
+            </div>
         </footer>
     </body>
 </html>
