--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <footer class="foot">
             <h3>© Chen Wang, 2022-2023. All rights reserved.</h3>
             <div>
-                <a href="mailto:teamblitz.f1.olaves@saintolaves.net" target="_blank"><img class="icon" src="mail.png"></a>
+                <a href="mailto:teamblitz.f1.olaves@gmail.com" target="_blank"><img class="icon" src="mail.png"></a>
                 <a href="https://twitter.com/blitz_f1" target="_blank"><img class="icon" src="x.png"></a>
                 <a href="https://github.com/teamblitzolaves" target="_blank"><img class="icon" src="github.png"></a>
             </div>
