--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     </div>
                     <img src="Yash.jpg">
                     <div class="info">
-                        <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
-                        <blockquote>"Quote"</blockquote>
+                        <p>As well as designing our logo and leading the team, Yash has dedicated himself to learning many skills to aid each one of us in our roles, including himself - being the first to start learning CAD (Fusion 360) and organising & delegating tasks. He has also played a massive role in manufacturing: priming, painting, assembling, attaching vinyls and so much more, dedicating hours to the car.</p>
+                        <blockquote>"Working smarter and harder can lead to success"</blockquote>
                     </div>
                 </div>
                 <div class="right">
@@ -61,8 +61,8 @@
                     </div>
                     <img src="Pranit.jpg">
                     <div class="info">
-                        <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
-                        <blockquote>"Quote"</blockquote>
+                        <p>Pranit, not only being Design Engineer, quickly helped us interpret the results of CFD, a testing software, which is an integral part of the Design-Test cycle, so that we could rapidly produce more prototypes. He also has a strong passion for Art which allowed him to draw detailed 3D designs on paper with his incredible art skills, enabling us to start CAD work rapidly.</p>
+                        <blockquote>"F1 in Schools is an enriching & fun experience!"</blockquote>
                     </div>
                 </div>
                 <div class="left">
@@ -73,7 +73,7 @@
                     <img src="Chen.jpg">
                     <div class="info">
                         <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car, and being able to produce drag and lift values for us to compare other cars against and log in our portfolio. In addition, he manages digital presence side of our brand, even creating this very website! He has also set up our email and Twitter account to use for team-related activities.</p>
-                        <blockquote>"f1 is very cool"</blockquote>
+                        <blockquote>"f1 in school is very cool"</blockquote>
                     </div>
                 </div>
                 <div class="right">
@@ -83,8 +83,8 @@
                     </div>
                     <img src="Rayhaan.jpg">
                     <div class="info">
-                        <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
-                        <blockquote>"Quote"</blockquote>
+                        <p>Rayhaan has been interested from F1 for a long time, meaning he was able to contribute a lot to our Initial Ideas from his knowledge of successful F1 cars. He is also very skilled at PowerPoint, laying out our presentations extremely effectively. As Resource Manager, he managed the portfolio, gave a helping hand during the manufacturing process and has a creative vision for the car through his expertise and passion for F1.</p>
+                        <blockquote>"F1 in Schools is extremely fun and rewarding"</blockquote>
                     </div>
                 </div>
                 <br>
@@ -95,9 +95,9 @@
                 <h1>Our Car Design</h1>
                 <img src="car.png" id="car">
                 <div class="longright">
-                    <h2>Dash</h2>
+                    <h2>Dash v2</h2>
                     <h3>Drag - 0.24974529N</h3>
-                    <p>Dash is our first car we have created and competed with, going through many stages to reach where it has got to. It has performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit. Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                    <p>Dash v2 is our first car we have created and competed with, going through many stages to reach where it has got to. It has performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. It has minor changes from the Dash v1 and a new rear wing following advice from experienced teams in our school: A longer tear drop shape rather than an oval. This new rear wing introduced in the last few months of the design-test cycle after other DEV and PRO F1 in Schools teams recommended us to try a longer rear wing. Promising CFD results led us to produce this final car to be manufactured for the competition day. It is made up of 3 parts: Pierce for the front wing, Flat for the side pod, and elipse for the rear wing. These parts were chosen because they performed the best in initial rounds of testing and its chemistry between one another was also great, according to the CFD results. Not only that, the minor adjustments we made to the connection between side and rear pod for example also proved useful in our CFD results. We hope that Dash v2 will lead us to success on competition day, as we have worked incredibly hard (and smart) to achieve this car. Not only that, it took around 2 weeks to go from concept to finished product, after many coats of paint, primer and vinyl stickers.</p>
                 </div>
             </section>
 
