--- a/sponsor.html
+++ b/sponsor.html
@@ -2,10 +2,10 @@
 <html lang="en-GB">
     <head>
         <link rel="stylesheet" type="text/css" href="template.css">
-        <title>Team Blitz | Home</title>
+        <title>Team Blitz | Sponsors</title>
         <meta charset="UTF-8">
         <meta name="keywords" content="Team Blitz, St Olave's Grammar School">
-        <meta name="description" content="Homepage of Team Blitz website">
+        <meta name="description" content="Sponsor page of Team Blitz website">
         <meta name="author" content="Team Blitz">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="scripts.js" defer></script>
@@ -26,11 +26,12 @@
             <img src="placeholder.png">
         </section>
         <section>
-            <h1>Who are we?</h1>
+            <h1>We're looking for sponsors!</h1>
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-            <h1>What is F1 in Schools?</h1>
+            <h1>Your aid, our endorsement</h1>
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-            <h1>Recent News</h1>
+            <h1>In partnership with:</h1>
+            <h2>josh dad</h2>
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
         </section>
         <footer>
