--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-GB">
     <head>
         <link rel="stylesheet" type="text/css" href="template.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Team Blitz | Home</title>
         <meta charset="UTF-8">
         <meta name="keywords" content="Team Blitz, St Olave's Grammar School">
@@ -12,20 +13,23 @@
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <li><a href="index.html">Welcome</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="journey.html">Our Journey</a></li>
-                <li><a href="car-and-portfolio.html">Our Car & Portfolio</a></li>
-                <li><a href="sponsor.html">Sponsors</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+        <nav class="topnav" id="toppy">
+            <a href="index.html" class="logo"><img src="./xs-placeholder.png"></a>
+            <div class="links">
+                <a href="index.html" class="link active">Home</a>
+                <a href="about.html" class="link">About us</a>
+                <a href="journey.html" class="link">Our Journey</a>
+                <a href="car-and-portfolio.html" class="link">Our Car & Portfolio</a>
+                <a href="sponsor.html" class="link">Sponsors</a>
+                <a href="contact.html" class="link">Contact Us</a>
+                <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
+            </div>
         </nav>
-        <section>
-            <img src="placeholder.png">
+        <section class="banner">
+            <h1>Blitz</h1>
+            <h3>Engineering speed with precision</h3>
         </section>
-        <section>
+        <section class="info">
             <h1>Who are we?</h1>
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
             <h1>What is F1 in Schools?</h1>
@@ -34,18 +38,22 @@
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
         </section>
         <footer>
-            <div>
-                <p>© Team Blitz 2022-2024. All rights reserved.</p>
-                <img src="placeholder.png">
+            <div id="sponsors">
+                <img src="crossfields.png">
+                <img src="s-placeholder.png">
+                <img src="s-placeholder.png">
             </div>
-            <ul>
-                <li><a href="index.html">Welcome</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="journey.html">Our Journey</a></li>
-                <li><a href="car-and-portfolio.html">Our Car & Portfolio</a></li>
-                <li><a href="sponsor.html">Sponsors</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <div class="footnav">
+                <a href="index.html" class="footlink">Home</a>
+                <a href="about.html" class="footlink">About us</a>
+                <a href="journey.html" class="footlink">Our Journey</a>
+                <a href="car-and-portfolio.html" class="footlink">Our Car & Portfolio</a>
+                <a href="sponsor.html" class="footlink">Sponsors</a>
+                <a href="contact.html" class="footlink">Contact Us</a>
+            <div>
+            <div id="copybox">
+                <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            </div>
         </footer>
     </body>
 </html>
