--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="template.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Team Blitz | Home</title>
+        <link rel="icon" type="image/x-icon" href="xs-placeholder.png">
         <meta charset="UTF-8">
         <meta name="keywords" content="Team Blitz, St Olave's Grammar School">
         <meta name="description" content="Homepage of Team Blitz website">
@@ -31,11 +32,17 @@
         </section>
         <section class="info">
             <h1>Who are we?</h1>
-            <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+            <p>We are Team Blitz of Saint Olave's Grammar School, a group of 5 dedicated team members with a burning passion for STEM (Science, Technology, Engineering and Maths) and DT. We all came together, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are today! We participated in the 2023 Regionals at London North, entering as an ENTRY class team and came home with 2 awards & coming 2nd in the entry class! We are now working towards the Development class and hope to continue our success!</p>
             <h1>What is F1 in Schools?</h1>
-            <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+            <p>F1 in Schools is a fun STEM-based activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
+            <a href="https://www.f1inschools.co.uk/about.html">Learn more..</a>
             <h1>Recent News</h1>
-            <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+            <div class="article">
+                <h2>Success at Regionals 2023!</h2>
+                <p>14th December, 2023</p>
+                <p>Harlow College</p>
+                <p>Yash literally has no life</p>
+            </div>
         </section>
         <footer>
             <div id="sponsors">
@@ -45,7 +52,7 @@
             </div>
             <div class="footnav">
                 <a href="index.html" class="footlink">Home</a>
-                <a href="about.html" class="footlink">About us</a>
+                <a href="about.html" class="footlink">About Us</a>
                 <a href="journey.html" class="footlink">Our Journey</a>
                 <a href="car-and-portfolio.html" class="footlink">Our Car & Portfolio</a>
                 <a href="sponsor.html" class="footlink">Sponsors</a>
