Footer fixed; add social networks
The copyright statement no longer is squashed next to the mini nav bar

Social networks added (tiktok leaked)

--- a/car-and-portfolio.html
+++ b/car-and-portfolio.html
@@ -28,6 +28,7 @@
         <section class="banner">
             <h1>Blitz</h1>
             <h3>Our Cars & Portfolio</h3>
+        </section>
         <section class="info">
             <h1>Our Car Designs</h1>
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
@@ -47,9 +48,12 @@
                 <a href="car-and-portfolio.html" class="footlink">Our Car & Portfolio</a>
                 <a href="sponsor.html" class="footlink">Sponsors</a>
                 <a href="contact.html" class="footlink">Contact Us</a>
-            <div>
-            <div id="copybox">
-                <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            </div>
+            <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com/team_blitz8" id="insta"><img src="./insta.png"></a>
+                <a href="https://twitter.com/team_blitz8" id="x"><img src="./twitter.png"></a>
+                <a href="https://tiktok.com/@team_blitz8" id="tiktok"><img src="./tiktok.png"></a>
             </div>
         </footer>
     </body>
