--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,12 @@
                 <a href="car-and-portfolio.html" class="footlink">Our Car & Portfolio</a>
                 <a href="sponsor.html" class="footlink">Sponsors</a>
                 <a href="contact.html" class="footlink">Contact Us</a>
-            <div>
-            <div id="copybox">
-                <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            </div>
+            <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com/team_blitz8" id="insta"><img src="./insta.png"></a>
+                <a href="https://twitter.com/team_blitz8" id="x"><img src="./twitter.png"></a>
+                <a href="https://tiktok.com/@team_blitz8" id="tiktok"><img src="./tiktok.png"></a>
             </div>
         </footer>
     </body>
